# aliyun_crawler

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: ## Plan: Calltrace Multi-Agent Refactor  calltrace_context_management.md  copilot_precise_editing_reference.md  server-frontend-migration.md  usage.md
scripts/: cwe_stats.py  language_stats.py
src/aliyun_crawler/: __init__.py  _cli.py  calltrace.py  config.py  crawler.py  filter.py  rawdb_cli.py  storage.py
src/aliyun_crawler/agents/: __init__.py  contracts.py  coordinator.py  evaluator.py  explorer.py  tools.py
src/aliyun_crawler/cli/: __init__.py  __main__.py  app.py
src/aliyun_crawler/crawler/: __init__.py
src/aliyun_crawler/filter/: __init__.py
src/aliyun_crawler/rawdb/: __init__.py  api.py  factory.py  models.py  repositories.py  service.py
src/aliyun_crawler/server/: __init__.py  __main__.py
src/aliyun_crawler/storage/: __init__.py
src/aliyun_crawler/tracer/: __init__.py  explorer.py
src/aliyun_crawler/utils/: token_cost.py
src/logic_vulns/: __init__.py
src/logic_vulns/filter/: __init__.py  pipeline.py
src/logic_vulns/tracer/: __init__.py  explorer.py
src/vulndb_mirror/: __init__.py  config.py  models.py
src/vulndb_mirror/cli/: __init__.py  __main__.py  app.py
src/vulndb_mirror/crawler/: __init__.py  core.py
src/vulndb_mirror/server/: __init__.py  __main__.py  api.py
src/vulndb_mirror/storage/: __init__.py  file_storage.py  ingest_service.py  raw_models.py  repositories.py  repository_factory.py
src/vulndb_mirror/utils/: __init__.py  commit_resolver.py
web/: README.md  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
