[project]
name = "vulndb-mirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.116.1",
    "httpx[socks]>=0.28.1",
    "openai>=1.0.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.35.0",
]

[project.scripts]
vulndb-mirror = "vulndb_mirror.cli.app:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vulndb_mirror", "src/logic_vulns"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
